--- a/sales.html
+++ b/sales.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class-06</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -15,9 +16,6 @@
     </header>
 
     <div id="SalmonCookies">
-
-
-
 
 
 
