--- a/sales.html
+++ b/sales.html
@@ -13,14 +13,54 @@
 </head>
 
 <body>
-    <header>
+    
 
-        <h1>Salmon Cookies</h1>
-    </header>
+   
+       
+       <form id="form">
 
-    <div id="SalmonCookies">
+<fieldset>
+<label for="locationName">locationName</label>
+<input type="text" name="locationName" id="locationName" required>
+
+<br>
+<br>
+<br>
+
+<label for="minCustomers">minCustomers</label>
+<input type="number" name="minCustomers" id="minCustomers" required>
+
+<br>
+<br>
+<br>
 
 
+
+<label for="maxCustomers">maxCustomers</label>
+<input type="number" name="maxCustomers" id="maxCustomers" required>
+<br>
+<br>
+<br>
+
+<label for="avgCookies">avgCookies</label>
+<input type="floate" name="avgCookies" id="avgCookies" required>
+<br>
+<br>
+<br>
+<input type="submit" value="save">
+
+</fieldset>
+
+
+
+
+
+
+       </form>
+       <br>
+       <br>
+       <br>
+       <div id="SalmonCookies">
 
 
     </div>
