--- a/sales.html
+++ b/sales.html
@@ -1,53 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head >
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class-06</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <ul>
-        <li><a href="index.html">index.html</a></li>
-    </ul>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
+  
+
 </head>
 
-<body>
-    
+<body class="salesBackground">
+    <p id="logo">Sales</p>
+    <a class="Link" href="index.html"> visit The main page</a>
 
    
        
        <form id="form">
 
 <fieldset>
-<label for="locationName">locationName</label>
-<input type="text" name="locationName" id="locationName" required>
+<label for="locationName">locationName:</label>
+<input type="text" name="locationName" id="locationName" required placeholder="e.g:amman">
 
+<!-- <br>
 <br>
-<br>
-<br>
+<br> -->
 
-<label for="minCustomers">minCustomers</label>
+<label for="minCustomers">minCustomers:</label>
 <input type="number" name="minCustomers" id="minCustomers" required>
 
+<!-- <br>
 <br>
-<br>
-<br>
+<br> -->
 
 
 
-<label for="maxCustomers">maxCustomers</label>
+<label for="maxCustomers">maxCustomers:</label>
 <input type="number" name="maxCustomers" id="maxCustomers" required>
+<!-- <br>
 <br>
-<br>
-<br>
+<br> -->
 
-<label for="avgCookies">avgCookies</label>
+<label for="avgCookies">avgCookies:</label>
 <input type="floate" name="avgCookies" id="avgCookies" required>
 <br>
 <br>
 <br>
-<input type="submit" value="save">
+<input class="submit" type="submit" value="save">
 
 </fieldset>
 
